<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fillViewport="true"
        tools:context=".app.view.fragment.auth.reset_password.ResetPasswordFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/app_logo"
                    android:layout_width="55.26dp"
                    android:layout_height="51.63dp"
                    android:layout_marginTop="35dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/reset_password_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/frgt"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/app_logo"
                    app:layout_constraintStart_toStartOf="@+id/app_logo"
                    app:layout_constraintTop_toBottomOf="@+id/app_logo" />

                <TextView
                    android:id="@+id/reset_password_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="35dp"
                    android:text="@string/asking_for_reset"
                    android:textAlignment="center"
                    android:textColor="@color/textDisabledColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reset_password_title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_reset_email_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    app:layout_constraintEnd_toEndOf="@+id/reset_password_description"
                    app:layout_constraintStart_toStartOf="@+id/reset_password_description"
                    app:layout_constraintTop_toBottomOf="@+id/reset_password_description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_reset_email_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        tools:ignore="Autofill" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/reset_password_send_request_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_gradient"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:text="@string/send_request"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</layout>