<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".app.view.fragment.AuthFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/auth_head_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/auth_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/auth_head_title"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageview_header_logo"
                    android:layout_width="55.26dp"
                    android:layout_height="51.63dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_logo" />

                <Button
                    android:id="@+id/button_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="56dp"
                    android:background="@drawable/button_enter_mode"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/textDisabledColor"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/signin_buttons_horizontal_separator" />

                <View
                    android:id="@+id/signin_buttons_horizontal_separator"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/button_sign_in"
                    app:layout_constraintEnd_toStartOf="@+id/button_sign_up"
                    app:layout_constraintStart_toEndOf="@+id/button_sign_in"
                    app:layout_constraintTop_toTopOf="@+id/button_sign_in" />

                <Button
                    android:id="@+id/button_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="56dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/button_enter_mode"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageview_header_logo" />

                <FrameLayout
                    android:id="@+id/fragment_enter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_sign_in">

                </FrameLayout>

                <TextView
                    android:id="@+id/agreement_top_sentence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/agree"
                    android:textAlignment="center"
                    android:textColor="@color/textDisabledColor"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toTopOf="@id/agreement_bottom_sentence" />

                <TextView
                    android:id="@+id/agreement_bottom_sentence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_and_conditions_and_privacy_policy"
                    android:textAlignment="center"
                    android:textColor="@color/textDisabledColor"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>